--- a/css/style.css
+++ b/css/style.css
@@ -136,10 +136,13 @@ body {
     color: white;
     justify-content: center;
     align-content: center;
+    font-size: 60px;
 }
 
 .splash p {
     color: white;
+    margin-top: 200px;
+    font-size: 20px;
 }
 
 
